--- a/Beispiele/Crashkurs SCSS/14 - Crashkurs SCSS/Teil 2/index.css
+++ b/Beispiele/Crashkurs SCSS/14 - Crashkurs SCSS/Teil 2/index.css
@@ -2,7 +2,6 @@ h1 {
   color: #660000;
   border-bottom: 3px solid #660000;
 }
-
 h1:hover {
   color: green;
   border-bottom: 3px solid green;
@@ -11,8 +10,6 @@ h1:hover {
 ul, ol {
   list-style-type: none;
 }
-
 ul li, ol li {
-  color: red;
-}
-/*# sourceMappingURL=index.css.map */
+  color: rgb(255, 0, 0);
+}/*# sourceMappingURL=index.css.map */
