--- a/Beispiele/Crashkurs SCSS/14 - Crashkurs SCSS/Teil 3/index.css
+++ b/Beispiele/Crashkurs SCSS/14 - Crashkurs SCSS/Teil 3/index.css
@@ -1,7 +1,6 @@
 .box {
   width: 300px;
   height: 300px;
-  background: -webkit-gradient(linear, left top, left bottom, from(white), to(black));
   background: linear-gradient(to bottom, white, black);
 }
 
@@ -9,7 +8,6 @@ h1 {
   color: #660000;
   border-bottom: 3px solid #660000;
 }
-
 h1:hover {
   color: green;
   border-bottom: 3px solid green;
@@ -18,8 +16,6 @@ h1:hover {
 ul, ol {
   list-style-type: none;
 }
-
 ul li, ol li {
-  color: red;
-}
-/*# sourceMappingURL=index.css.map */
+  color: rgb(255, 0, 0);
+}/*# sourceMappingURL=index.css.map */
