feat: Add new HTML files for Flexbox examples and update CSS styles

--- a/Flexbox/style.css
+++ b/Flexbox/style.css
@@ -15,3 +15,12 @@ background-color: white;
 border: solid black 1px;
 
 }
+
+/* .box2{
+
+
+
+background-color: white;
+border: solid black 1px;
+
+} */
